Fix center alignment

--- a/client/src/style/signin.css
+++ b/client/src/style/signin.css
@@ -2,7 +2,7 @@
     width: 40%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
 }
 
 .signin-title {
@@ -13,6 +13,7 @@
 }
 
 .signin-form {
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
